# ShopApplicationFastAPI

./: docker-compose.yaml  ecommerce.db  main.py  pyproject.toml  test.py
app/: __main__.py  database.py  db_depends.py  main.py  schemas.py
app/migrations/versions/: aaafbb22f6da_create_categories_and_products_table.py
app/models/: categories.py  products.py
app/routers/: categories.py  products.py
